# multipass

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  roadmap.md
scripts/: smoke_chat.py
src/multipass/: __init__.py  bootstrap.py
src/multipass/application/: backends.py  clipboard_operations.py  manager.py
src/multipass/domain/: __init__.py  chat.py  errors.py  result.py
src/multipass/domain/transformers/: __init__.py  encoding.py  table.py  text.py  time_range.py  url.py
src/multipass/infrastructure/: backends.py  bedrock_client.py  clipboard_manager.py  config.py  stream_worker.py
src/multipass/security/: __init__.py  nonce_service.py  prompt_builder.py  prompt_policy.py  sanitizer.py  trust_tags.py
src/multipass/ui/: __init__.py  __main__.py  chat_window.py  desktop_app.py  main_window.py
tests/: test_backends.py  test_bootstrap.py  test_clipboard_operations.py  test_manager.py  test_manager_stream.py  test_prompt_builder.py  test_sanitizer.py  test_ui.py
